# ai-bot

./: .env.example  hello.py  pyproject.toml
src/crew/: bot_crew.py  main.py
src/crew/config/: agents.yaml  tasks.yaml
src/crew/tools/: context.py  search.py  serper.py  vector.py
